Changed by GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             ">
             Натисніть на екран для отримання
             <br>
-            доступу до WebAR-буклету «Pascal-s-calculator»
+            доступу до WebAR-буклету «Pascal-s-calculator.»
         </div>
     </div>
 
